# farm

./: .claudeignore  .dockerignore  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .zizmor.yml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  DESIGN_SPEC.md  LICENSE  README.md  atlas.hcl  codecov.yml  d2_fence.py  docker-compose.yml  mkdocs.yml  opencode.json  pyproject.toml  pyrightconfig.json  renovate.json
.claude/: hookify.block-pr-create.md  hookify.enforce-parallel-tests.md  hookify.function-length.md  hookify.missing-logger.md  hookify.no-cd-prefix.md  hookify.no-future-annotations.md  hookify.no-local-coverage.md  settings.json
.claude/agents/: design-token-audit.md  diagram-syntax-validator.md  tool-parity-checker.md
.github/: .grype.yaml  .trivyignore.yaml  .zizmor.yml  CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  package-lock.json  package.json  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  installer-failure.yml
.github/ci/: web-async-leaks.max
.github/workflows/: apko-lock.yml  ci.yml  cla.yml  cli.yml  dast.yml  dependency-review.yml  dev-release.yml  docker.yml  finalize-release.yml  pages-preview.yml  pages.yml  python-audit.yml  release.yml  scorecard.yml  secret-scan.yml  zizmor.yml
.opencode/agents/: api-contract-drift.md  async-concurrency-reviewer.md  code-reviewer.md  comment-analyzer.md  conventions-enforcer.md  design-token-audit.md  diagram-syntax-validator.md  docs-consistency.md  frontend-reviewer.md  go-conventions-enforcer.md  go-reviewer.md  go-security-reviewer.md  infra-reviewer.md  issue-resolution-verifier.md  logging-audit.md  persistence-reviewer.md  pr-test-analyzer.md  python-reviewer.md  resilience-audit.md  security-reviewer.md  silent-failure-hunter.md  test-quality-reviewer.md  type-design-analyzer.md
.opencode/commands/: analyse-logs.md  aurelio-review-pr.md  codebase-audit.md  post-merge-cleanup.md  pre-pr-review.md  research-link.md  review-dep-pr.md  worktree.md
.opencode/plugins/: memory.ts  synthorg-hooks.ts
claude-proxy/: Dockerfile  proxy.py
cli/: .gitignore  .golangci.yml  .goreleaser.yml  CLAUDE.md  go.mod  go.sum  main.go
cli/cmd/: backup.go  backup_test.go  cleanup.go  completion_install.go  config.go  config_ext_test.go  config_test.go  doctor.go  doctor_test.go  envvars.go  flags_test.go  helpers.go  init.go  init_encrypt_test.go  init_fine_tune_test.go  init_postgres_test.go  init_tui.go  init_tui_view.go  logs.go  procattr_other.go  procattr_windows.go  root.go  setup.go  start.go  start_test.go  status.go  status_test.go  stop.go  uninstall.go  uninstall_test.go  update.go  update_cleanup.go  update_cleanup_test.go  update_compose.go  update_health.go  update_health_test.go  update_test.go  version.go  wipe.go  wipe_test.go  (+3 more)
cli/scripts/: install.ps1  install.sh
cli/testdata/: compose_custom_ports.yml  compose_default.yml  compose_digest_pins.yml  compose_sandbox.yml
config/agents/: csuite.yaml
data/: competitors.yaml
docker/: .env.example  compose.distributed.yml  compose.fine-tuning-cpu.yml  compose.fine-tuning-gpu.yml  compose.override.yml  compose.yml  nats.conf
docker/backend/: Dockerfile  Dockerfile.overlay  apko.yaml
docker/fine-tune/: Dockerfile  apko.yaml
docker/sandbox/: Dockerfile  apko.yaml  healthz.py  sandbox-init.sh
docker/sidecar/: Dockerfile  apko.yaml
docker/web/: Dockerfile  apko.yaml  melange.yaml
docs/: DESIGN_SPEC.md  cross-deployment-privacy.md  design_spec.md  errors.md  getting_started.md  index.md  licensing.md  rest-api.md  security.md  user_guide.md
docs/api/: api.md  budget.md  communication.md  config.md  core.md  engine.md  hr.md  index.md  layer.md  memory.md  observability.md  persistence.md  providers.md  security.md  templates.md  tools.md
docs/architecture/: acg-glossary.md  decisions.md  index.md  tech-stack.md
docs/decisions/: ADR-001-memory-layer.md  ADR-002-design-decisions-batch-1.md  ADR-003-documentation-architecture.md
docs/design/: a2a-protocol.md  agent-execution.md  agents.md  backup.md  brand-and-ux.md  budget.md  ceremony-scheduling.md  client-simulation.md  communication.md  coordination.md  deployment.md  distributed-runtime.md  engine.md  hr-lifecycle.md  index.md  integrations.md  memory-consistency.md  memory.md  notifications.md  observability.md  ontology.md  operations.md  organization.md  page-structure.md  persistence.md  providers.md  security.md  self-improvement.md  strategy.md  tools.md  ux-guidelines.md  ux-research.md  verification-quality.md
docs/guides/: agent-management.md  agents.md  budget.md  company-config.md  contributing.md  deployment.md  human-interaction.md  index.md  mcp-tools.md  memory.md  monitoring.md  notifications-and-events.md  quickstart.md  security.md  settings-reference.md  workflow-api.md
docs/openapi/: index.md
docs/overrides/: main.html
docs/reference/: claude-reference.md  embedding-evaluation.md  errors.md  research.md  rl-consolidation-feasibility.md
docs/research/: acg-formalism-evaluation.md  execution-safety-threat-model.md  multi-agent-failure-audit.md  s1-multi-agent-decision.md
scripts/: _logger_exception_baseline.json  _web_design_patterns.py  caddy-validate.sh  check_backend_regional_defaults.py  check_bash_no_write.sh  check_forbidden_literals.py  check_git_c_cwd.sh  check_no_edit_migration.sh  check_no_modify_migration.sh  check_no_redundant_timeout.py  check_openapi_liveness.py  check_push_rebased.sh  check_single_migration_per_pr.sh  check_web_design_system.py  cis-scan.sh  export_openapi.py  extract_web_strings.py  generate_comparison.py  issue_analyzer.py  patch_sitemap.py  run_affected_mypy.py  run_affected_tests.py  squash_migrations.sh
site/: astro.config.mjs  package-lock.json  package.json
tests/: conftest.py
web/: .env.example  CLAUDE.md  Caddyfile  app.js  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  security-headers.conf  style.css  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+3502 files in other folders)
