[project]
name = "synthorg"
dynamic = ["version"]
description = "Framework for building synthetic organizations -- autonomous AI agents orchestrated as a virtual company"
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.14"
authors = [{ name = "Aurelio" }]
keywords = ["ai", "agents", "llm", "orchestration", "synthetic-organization", "synthorg"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "aiodocker==0.26.0",
    "aiosqlite==0.22.1",
    "argon2-cffi==25.1.0",
    "cryptography==46.0.6",
    "faker==40.11.1",
    "jinja2==3.1.6",
    "jsonschema==4.26.0",
    "litellm==1.82.6",
    "litestar[standard,structlog,pydantic,brotli,prometheus]==2.21.1",
    "mcp==1.26.0",
    "mem0ai==1.0.9",
    "pydantic==2.12.5",
    "pyjwt[crypto]==2.12.1",
    "pyyaml==6.0.3",
    "structlog==25.5.0",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/synthorg/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/synthorg"]
artifacts = ["src/synthorg/**/*.sql"]

[dependency-groups]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.8.0",
    "polyfactory==3.3.0",
    "respx==0.22.0",
    "hypothesis==6.151.10",
]
docs = [
    "zensical==0.0.30",
    "mkdocstrings[python]==1.0.3",
    "griffe-pydantic==1.3.1",
]
dev = [
    "commitizen==4.13.9",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pip-audit==2.10.0",
    "pre-commit-uv==4.2.1",
    "ruff==0.15.8",
    "types-pyyaml==6.0.12.20250915",
    "bandit==1.9.4",
    {include-group = "test"},
    {include-group = "docs"},
]

# ---------------------------------------------------------------------------
# Ruff -- linter + formatter (replaces flake8, isort, pyupgrade, etc.)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "C90",    # mccabe complexity
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TC",     # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint
    "FURB",   # refurb
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    # "FAST" removed -- using Litestar, not FastAPI
    "ASYNC",  # flake8-async
    "FBT",    # flake8-boolean-trap
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "D",      # pydocstyle
]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D107",   # missing docstring in __init__
    "ISC001", # conflicts with ruff formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "S105",    # hardcoded passwords in test data
    "S106",    # hardcoded passwords as arguments in test data
    "ARG",     # unused arguments (fixtures)
    "FBT",     # boolean trap (parametrize)
    "D",       # no docstrings required in tests
    "PLR2004", # magic values in tests
    "SLF001",  # private member access in tests
    "PLC0415", # local imports in test functions
    "TC",      # type-checking imports (fixture type hints)
]
"__init__.py" = ["F401"]
"scripts/**/*.py" = [
    "T20",     # print allowed in CLI scripts
    "E501",    # long lines in embedded HTML templates
    "PLC0415", # deferred imports in scripts
]

[tool.ruff.lint.isort]
known-first-party = ["synthorg"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"__future__.annotations".msg = "Python 3.14+ has native lazy annotations (PEP 649). Do not use `from __future__ import annotations`."

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy -- static type checker (strict mode)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-cast", "truthy-bool"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "litellm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiodocker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosqlite.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mem0.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "litestar.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# pyright -- IDE type checking only (not used in CI)
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

# ---------------------------------------------------------------------------
# commitizen -- conventional commits
# ---------------------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.9" # x-release-please-version
tag_format = "v$version"

# ---------------------------------------------------------------------------
# pytest -- test runner
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "unit: Unit tests (fast, isolated, no I/O)",
    "integration: Integration tests (may use I/O, databases, APIs)",
    "e2e: End-to-end tests (full system, slow)",
    "slow: Slow tests (excluded from default runs)",
]
addopts = ["--strict-markers", "--strict-config", "-ra", "--tb=short", "--dist=worksteal", "-n=auto"]
filterwarnings = [
    "error",
    "ignore:Core Pydantic V1 functionality:UserWarning",
]

# ---------------------------------------------------------------------------
# coverage -- test coverage reporting
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["synthorg"]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
